--- a/.github/workflows/extensions.yml
+++ b/.github/workflows/extensions.yml
@@ -55,7 +55,10 @@ jobs:
       - name: Set up environment
         run: |
           pip install pytest-github-actions-annotate-failures
-          pip install git+https://github.com/ruslan33/diracx.git@mydiracx-extension
+          pip install git+https://github.com/DIRACGrid/DIRAC.git@integration
+          pip install 'git+https://github.com/ruslan33/diracx.git@mydiracx-extension#egg=mydiracx-db&subdirectory=extensions/mydiracx/mydiracx-db'
+          pip install 'git+https://github.com/ruslan33/diracx.git@mydiracx-extension#egg=mydiracx-routers&subdirectory=extensions/mydiracx/mydiracx-routers'
+          pip install 'git+https://github.com/ruslan33/diracx.git@mydiracx-extension#egg=mydiracx&subdirectory=extensions/mydiracx'
           pip install ${{ matrix.dependencies }} ${{ matrix.package }}[types]
       - name: Run mypy
         run: |
