--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -26,6 +26,11 @@ dependencies = [
     "httpx",
     "pydantic",
     "sqlalchemy",
+    "opentelemetry-api",
+    "opentelemetry-exporter-otlp",
+    "opentelemetry-instrumentation-fastapi",
+    "opentelemetry-instrumentation-logging",
+    "opentelemetry-sdk",
 ]
 dynamic = ["version"]
 
