--- a/environment.yml
+++ b/environment.yml
@@ -32,7 +32,12 @@ dependencies:
   - isodate
   - mypy
   - opensearch-py
+  - opentelemetry-api
+  - opentelemetry-exporter-otlp
+  - opentelemetry-instrumentation-fastapi
+  - opentelemetry-instrumentation-logging
   - pydantic >=2.4
+  - pydantic-settings
   - pyjwt
   - pytest
   - pytest-asyncio
