--- a/environment.yml
+++ b/environment.yml
@@ -36,6 +36,7 @@ dependencies:
   - opentelemetry-exporter-otlp
   - opentelemetry-instrumentation-fastapi
   - opentelemetry-instrumentation-logging
+  - pre-commit
   - pydantic >=2.4
   - pydantic-settings
   - pyjwt
@@ -51,6 +52,7 @@ dependencies:
   - requests
   - rich
   - sqlalchemy
+  - shellcheck
   - typer
   - types-cachetools
   - types-PyYAML
