--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,13 +39,7 @@ jobs:
       - uses: mamba-org/setup-micromamba@v1
         with:
           # TODO: Use a conda environment file used for the diracx/base container image
-          environment-name: test-env
-          create-args: >-
-            python=3.11
-            m2crypto
-            python-gfal2
-            mypy
-            pip
+          environment-file: environment.yml
           init-shell: bash
           post-cleanup: 'all'
       - name: Set up environment
