--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,27 +40,23 @@ jobs:
         with:
           # TODO: Use a conda environment file used for the diracx/base container image
           environment-name: test-env
-          create-args: >-
-            python=3.11
-            m2crypto
-            python-gfal2
-            mypy
-            pip
+          environment-file: environment.yml
           init-shell: bash
           post-cleanup: 'all'
       - name: Set up environment
         run: |
           pip install pytest-github-actions-annotate-failures
           pip install git+https://github.com/DIRACGrid/DIRAC.git@integration
-          pip install ${{ matrix.dependencies }} ${{ matrix.package }}[types]
-      - name: Run mypy
-        run: |
-          mypy ${{ matrix.package }}/src
+          pip install ${{ matrix.dependencies }}
       - name: Run pytest
         run: |
           cd ${{ matrix.package }}
           pip install .[testing]
           pytest --cov-report=xml:coverage.xml --junitxml=report.xml
+      - name: Run mypy
+        run: |
+          pip install mypy ${{ matrix.package }}[types]
+          mypy ${{ matrix.package }}/src
       - name: Upload coverage report
         uses: codecov/codecov-action@v4.5.0
 
@@ -78,7 +74,7 @@ jobs:
         run: |
           pip install pytest-github-actions-annotate-failures
           pip install git+https://github.com/DIRACGrid/DIRAC.git@integration
-          pip install ./diracx-core/ ./diracx-api/ ./diracx-cli/ ./diracx-client/ ./diracx-routers/ ./diracx-db/ ./diracx-testing/
+          pip install ./diracx-core/[testing] ./diracx-api/[testing] ./diracx-cli/[testing] ./diracx-client/[testing] ./diracx-routers/[testing] ./diracx-db/[testing] ./diracx-testing/
       - name: Start demo
         run: |
           git clone https://github.com/DIRACGrid/diracx-charts.git ../diracx-charts
@@ -147,7 +143,7 @@ jobs:
         run: |
           micromamba install -c conda-forge nodejs pre-commit
           pip install git+https://github.com/DIRACGrid/DIRAC.git@integration
-          pip install ./diracx-core/ ./diracx-api/ ./diracx-cli/ -e ./diracx-client/ ./diracx-routers/ ./diracx-db/ ./diracx-testing/
+          pip install ./diracx-core/ ./diracx-api/ ./diracx-cli/ -e ./diracx-client/[testing] ./diracx-routers/[testing] ./diracx-db/ ./diracx-testing/
           npm install -g autorest
       - name: Run autorest
         run: |
