Depend on uvicorn for diracx-routers

--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -25,6 +25,7 @@ dependencies = [
     "fastapi",
     "httpx",
     "pydantic >=2.4",
+    "uvicorn",
     "sqlalchemy",
     "opentelemetry-api",
     "opentelemetry-exporter-otlp",
