fix: adapt jobs cli to resolve issue with typer >= 0.12.4

--- a/diracx-cli/pyproject.toml
+++ b/diracx-cli/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "gitpython",
     "pydantic",
     "rich",
-    "typer <0.12.4",
+    "typer",
     "pyyaml",
 ]
 dynamic = ["version"]
