feat: Add PostgreSQL integration to diracx-db

--- a/diracx-db/pyproject.toml
+++ b/diracx-db/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "opensearch-py[async]",
     "pydantic >=2.10",
     "sqlalchemy[aiomysql,aiosqlite] >= 2",
+    "asyncpg",
 ]
 dynamic = ["version"]
 
