--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -82,6 +82,7 @@ jobs:
         uses: codecov/codecov-action@v5.4.0
 
   pytest-integration:
+    name: Integration test - ${{ matrix.dbName }}
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
