--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -59,7 +59,7 @@ SandboxAccessPolicy = "diracx.routers.job_manager.access_policies:SandboxAccessP
 
 # Minimum version of the client supported
 [project.entry-points."diracx.min_client_version"]
-diracx = "diracx.routers.version:DIRACX_MIN_CLIENT_VERSION"
+diracx = "diracx.routers:DIRACX_MIN_CLIENT_VERSION"
 
 [tool.setuptools.packages.find]
 where = ["src"]
