--- a/diracx-cli/pyproject.toml
+++ b/diracx-cli/pyproject.toml
@@ -18,7 +18,7 @@ dependencies = [
     "diracx-client",
     "diracx-core",
     "gitpython",
-    "pydantic",
+    "pydantic>=2.10",
     "rich",
     "typer",
     "pyyaml",
