--- a/extensions/gubbins/pyproject.toml
+++ b/extensions/gubbins/pyproject.toml
@@ -52,6 +52,7 @@ select = [
     "FLY", # flynt
     "DTZ", # flake8-datetimez
     "S",   # flake8-bandit
+    "N",   # pep8-naming
 ]
 
 ignore = [
