use sh.git instead of git module to fix https://github.com/DIRACGrid/diracx/issues/319

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,6 +120,10 @@ ignore_missing_imports = true
 module = 'authlib.*'
 ignore_missing_imports = true
 
+[[tool.mypy.overrides]]
+module = 'sh.*'
+ignore_missing_imports = true
+
 [tool.pytest.ini_options]
 testpaths = [
     "diracx-api/tests",
