update cs for test and new MaxRescheduling location under JobScheduling config
format

--- a/diracx-cli/tests/legacy/cs_sync/integration_test.yaml
+++ b/diracx-cli/tests/legacy/cs_sync/integration_test.yaml
@@ -801,6 +801,7 @@ Systems:
         Optimizers:
           JobScheduling:
             RescheduleDelays: '0'
+            MaxRescheduling: '3'
       FailoverURLs: {}
       Services:
         Matcher:
