--- a/diracx-cli/tests/legacy/cs_sync/integration_test.cfg
+++ b/diracx-cli/tests/legacy/cs_sync/integration_test.cfg
@@ -1280,6 +1280,7 @@ Systems
           {
             #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
             RescheduleDelays = 0
+            MaxRescheduling = 3
           }
         }
       }
