feat(diracx): move bl from __init__ files

--- a/diracx-cli/pyproject.toml
+++ b/diracx-cli/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
     "gitpython",
     "pydantic>=2.10",
     "rich",
-    "typer",
+    "typer>=0.12.4",
     "pyyaml",
 ]
 dynamic = ["version"]
