--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,10 +69,16 @@ ignore = [
     "D404",
 ]
 
+[tool.ruff.lint.isort]
+required-imports = ["from __future__ import annotations"]
+
 [tool.ruff.lint.per-file-ignores]
 # Ignore Bandit security checks in the test directories
 "diracx-testing/*" = ["S"]
 "diracx-*/tests/*" = ["S"]
+
+[tool.ruff.lint.extend-per-file-ignores]
+"diracx-routers/src/diracx/routers/access_policies.py" = ["I002"]
 
 [tool.ruff.lint.flake8-bugbear]
 # Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
