--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -13,12 +13,10 @@ classifiers = [
     "Topic :: System :: Distributed Computing",
 ]
 dependencies = [
-    "aiobotocore>=2.15",
     "authlib",
-    "botocore>=1.35",
     "cachetools",
-    "dirac",
     "diracx-core",
+    "diracx-logic",
     "diracx-db",
     "python-dotenv",    # TODO: We might not need this
     "python-multipart",
@@ -37,9 +35,6 @@ dynamic = ["version"]
 [project.optional-dependencies]
 testing = ["diracx-testing", "moto[server]", "pytest-httpx", "freezegun",]
 types = [
-    "boto3-stubs",
-    "types-aiobotocore[essential]",
-    "types-aiobotocore-s3",
     "types-cachetools",
     "types-python-dateutil",
     "types-PyYAML",
